Fix wrapping issue

--- a/src/features/roller/Keep.module.less
+++ b/src/features/roller/Keep.module.less
@@ -23,17 +23,20 @@
   margin-top: 24px;
 
   .buttons {
-    margin-bottom: 16px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     button {
-      margin-right: 16px;
+      margin-bottom: 16px;
     }
   }
 
   @media (min-width: @screen-md) {
     .buttons {
       float: left;
+      button {
+        margin-right: 16px;
+      }
     }
 
     form {
